--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul data-js="pokedex" class="pokedex"></ul>
     </div>
 
-    <script src="./app.js"></script>
+    <script src="/app.js"></script>
 </body>
 
 </html>
